# shellcord

./: .gitignore  LICENSE  README.md  de-init.sh  init.sh  pyproject.toml
.github/workflows/: pypi-publish.yml  python-test.yml
shellcord/: cli.py  config.py  generator.py  scord.py
shellcord/activate/: __init__.py  init.sh
tests/: Dockerfile
tests/scord_logs/: scord-log-normal.json
tests/unit/: conftest.py  test_cli.py  test_scord.py
