[tool.poetry]
name = "shellcord"
version = "0.1.0"
description = "Easily create runbooks from your shell commands"
authors = ["Ben <bnichs55@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
