[tool.poetry]
name = "shellcord"
version = "0.1.0"
description = "Easily create runbooks from your shell commands"
authors = ["Ben <bnichs55@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.3"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=shellcord --cov-report term-missing"
log_level = "DEBUG"

# I/O error for log_cli
# https://github.com/pallets/click/issues/824
#log_cli = true

testpaths = [
]
