[tool.poetry]
name = "shellcord"
version = "0.1.0"
description = "Easily create runbooks from your shell commands"
authors = ["Ben <bnichs55@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/bnichs/shellcord.git"
keywords = [
    "runbook",
    "shell",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Shells"
]
include = [
    "LICENSE",
]


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
tagged-metadata = true
metadata = false
bump = false

[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0.3"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
shellcord = "shellcord.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=shellcord --cov-report term-missing"
log_level = "DEBUG"

# I/O error for log_cli
# https://github.com/pallets/click/issues/824
#log_cli = true

log_file = "var/test.log"

testpaths = [
]
